[fix]: add ws protocol to http